[gd_scene load_steps=4 format=3 uid="uid://jhpc07f5j8t5"]

[ext_resource type="Script" path="res://Scenes/game_over_screen.gd" id="1_47axa"]
[ext_resource type="AudioStream" uid="uid://dwmxdv881y2rn" path="res://Assets/Audio/select2.wav" id="2_q0byk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7scqk"]
bg_color = Color(0, 0, 0, 0.568627)
border_color = Color(0.0823529, 0.345098, 0.8, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_47axa")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 640.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7scqk")

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 153.0
offset_top = 153.0
offset_right = 500.0
offset_bottom = 244.0
theme_override_font_sizes/font_size = 64
text = "Game Over
"
horizontal_alignment = 1

[node name="RestartBtn" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 258.0
offset_top = 343.0
offset_right = 379.0
offset_bottom = 396.0
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="QuitBtn" type="Button" parent="Panel"]
offset_left = 259.0
offset_top = 429.0
offset_right = 380.0
offset_bottom = 482.0
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Select" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_q0byk")
volume_db = -5.0

[connection signal="pressed" from="Panel/RestartBtn" to="." method="_on_restart_btn_pressed"]
[connection signal="pressed" from="Panel/QuitBtn" to="." method="_on_quit_btn_pressed"]
